--- a/notebooks/Cell-Bench scVI .ipynb
+++ b/notebooks/Cell-Bench scVI .ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = '/Users/dganguli/src/cellbench-scvi-stuffnthings/data/'\n",
+    "base_path = '../cellbench-scvi-stuffnthings/data/'\n",
     "\n",
     "# loads a gene by cell expression matrix, anc a cell level annotation dataframe\n",
     "def load_data(file_name, base_path=base_path):\n",
@@ -948,6 +948,91 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1127"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "len(cell_line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = pd.DataFrame(emb)\n",
+    "res = res.rename(columns = {0:'x', 1:'y'})\n",
+    "cell_line = list(tenx_cols.cell_line.values) + list(drop_cols.cell_line.values) \n",
+    "res['cell_line'] = cell_line\n",
+    "res['tech'] = '10X'\n",
+    "res.loc[0:902, 'tech'] = '10X'\n",
+    "res.loc[902:, 'tech'] = 'DropSeq'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res.to_csv('/Users/dganguli/Desktop/cell_bench.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6.137747  ,  9.326967  ],\n",
+       "       [ 6.270166  ,  6.2678094 ],\n",
+       "       [ 6.4363446 ,  9.3855915 ],\n",
+       "       ...,\n",
+       "       [-7.477319  ,  6.2847695 ],\n",
+       "       [ 0.94151574, -5.3445373 ],\n",
+       "       [ 2.7539868 ,  1.692392  ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zdf = pd.DataFrame(z_tot)\n",
+    "zdf = zdf.add_prefix('Activation')\n",
+    "zdf['cell_line'] = cell_line\n",
+    "zdf['tech'] = res.tech\n",
+    "longzdf = pd.wide_to_long(zdf.reset_index(), 'Activation', i=\"index\", j=\"LV\")\n",
+    "longzdf = longzdf.reset_index(level=0).reset_index(level=0)\n",
+    "del longzdf['index']\n",
+    "longzdf.to_csv('/Users/dganguli/Desktop/cell_bench_embedding.csv', index=0)"
+   ]
   },
   {
    "cell_type": "code",
