Added R coode for plots

--- a/notebooks/Cell-Bench scVI .ipynb
+++ b/notebooks/Cell-Bench scVI .ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/site-packages/numba/errors.py:102: UserWarning: Insufficiently recent colorama version found. Numba requires colorama >= 0.3.9\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os \n",
     "\n",
@@ -966,7 +957,6 @@
     }
    ],
    "source": [
-    "\n",
     "len(cell_line)"
    ]
   },
@@ -996,30 +986,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 6.137747  ,  9.326967  ],\n",
-       "       [ 6.270166  ,  6.2678094 ],\n",
-       "       [ 6.4363446 ,  9.3855915 ],\n",
-       "       ...,\n",
-       "       [-7.477319  ,  6.2847695 ],\n",
-       "       [ 0.94151574, -5.3445373 ],\n",
-       "       [ 2.7539868 ,  1.692392  ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 98,
    "metadata": {},
    "outputs": [],
@@ -1032,6 +998,15 @@
     "longzdf = longzdf.reset_index(level=0).reset_index(level=0)\n",
     "del longzdf['index']\n",
     "longzdf.to_csv('/Users/dganguli/Desktop/cell_bench_embedding.csv', index=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tenx_sub_scvi.X"
    ]
   },
   {
